# akima86

./: CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.py  setup.sh
.github/workflows/: build_and_push.yaml  build_test_and_publish.yaml
src/: uvipia_omp.f90
test/: test_akima.py
