[build-system]
requires = ["meson-python", "wheel", "numpy"]
build-backend = "mesonpy"

[project]
name = "akima86"
version = "0.1.1"
description = "Improved Akima 1-D Interpolation Method"
authors = [
    {name = "David Ryglicki", email = "david.ryglicki@gmail.com"},
]
dependencies = ["numpy", "matplotlib"]